--- a/holbegram/pubspec.yaml
+++ b/holbegram/pubspec.yaml
@@ -36,14 +36,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_storage: ^12.3.4
-  firebase_auth: ^5.3.1
+  firebase_auth: ^5.5.1
   cloud_firestore: ^5.4.4
-  firebase_database: ^11.1.4
-  firebase_core: ^3.6.0
+  firebase_database: ^11.3.4
+  firebase_core: ^3.12.1
   image_picker: ^0.8.5 
   uuid: ^3.0.6
   bottom_navy_bar: ^6.1.0
   flutter_staggered_grid_view: ^0.6.0
+  cloudinary_flutter: ^1.3.0
 
 dev_dependencies:
   flutter_test:
